--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><title>Now Loading</title></head>
 <body>
-<script language='javascript'>document.location = 'CV_new.pdf'</script>
+<script language='javascript'>document.location = 'CV_XiaoyuWang_20201130.pdf'</script>
 </body>
 </html>
