--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><head><title>Now Loading</title></head>
 <body>
-<script language='javascript'>document.location = 'CV_XiaoyuWang.pdf'</script>
+<script language='javascript'>
+//   document.location = 'CV_XiaoyuWang.pdf'</script>
 </body>
 </html>
