--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><head><title>Now Loading</title></head>
 <body>
 <script language='javascript'>
+  This is the Personal Page for Xiaoyu Wang
 //   document.location = 'CV_XiaoyuWang.pdf'</script>
 </body>
 </html>
